--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ a {
     font-size: x-large;
 }
 
+
 /* HOME */
 .home {
     height: 90vh;
@@ -104,4 +105,129 @@ a {
     -webkit-mask-size: 100%;
     -webkit-mask-image: url('./assets/Twitter-logo.svg.png');
     -webkit-mask-repeat: no-repeat;
+}
+
+/* HOME MODAL */
+.dropdown-globe,
+.dropdown-music {
+    position: relative;
+    display: inline-block;
+}
+.language-modal {
+    display: none;
+    position: absolute;
+    z-index: 20;
+    top: 5rem;
+    right: 27px;
+
+    border-radius: .5rem 0 .5rem .5rem;
+    background-color: rgba(0, 0, 0, 0.602);
+}
+.dropdown-globe:hover .language-modal,
+.dropdown-music:hover .music-modal {
+    display: block;
+}
+
+.language-modal:before {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-right: 24px solid rgba(0, 0, 0, 0.602);
+    border-left: 12px solid transparent;
+    border-bottom: 12px solid rgba(0, 0, 0, 0.602);
+    border-top: 20px solid transparent;
+    left: 91px;
+    bottom: 99px;
+}
+.line {
+    background-color: rgba(245, 245, 245, 0.297);
+    height: 1px;
+}
+
+/* HOME LANGUAGE MODAL */
+.language-option {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 12px 16px;
+    color: whitesmoke;
+}
+.he:hover {
+    background-color: #7BA3ED;
+    border-radius: .5rem 0 0 0;
+}
+.hs:hover {
+    background-color: #7BA3ED;
+    border-radius: 0 0 .5rem .5rem;
+}
+.language-option p {
+    font-size: 16px;
+}
+.language-option img {
+    width: 25px;
+    height: 25px;
+}
+
+/* HOME MUSIC MODAL */
+.music-modal {
+    display: none;
+    position: absolute;
+    z-index: 20;
+    top: 5rem;
+    right: 27px;
+    border-radius: .5rem 0 .5rem .5rem;
+    background-color: rgba(0, 0, 0, 0.602);
+
+    padding: 30px;
+    width: 320px;
+    color: whitesmoke;
+}
+.music-modal:before {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-right: 24px solid rgba(0, 0, 0, 0.602);
+    border-left: 12px solid transparent;
+    border-bottom: 12px solid rgba(0, 0, 0, 0.602);
+    border-top: 20px solid transparent;
+    left: 284px;
+    top: -32px;
+}
+.music-record {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    line-height: 1.2rem;
+}
+.music-record img {
+    width: 80px;
+    height: 80px;
+}
+.music-record-text strong {
+    font-size: 18px;
+}
+.music-record-text small {
+    font-size: 15px;
+}
+.music-player-play {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 1rem;
+}
+.music-player-volume {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding-top: 1rem;
+}
+.volume-line {
+    height: 3px;
+    width: 100%;
+    background-color: whitesmoke;
+}
+.hi:hover {
+    color: black;
 }
