--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root {
     --clr-blue: #7BA3ED;
 }
+@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Bungee+Hairline&display=swap');
 
 * {
     margin: 0;
@@ -8,8 +9,9 @@
     box-sizing: border-box;
 }
 html, body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 300;
+    font-family: 'Aboreto', cursive;
+    color: white;
+    background-color: rgb(9, 9, 9);
 }
 .container {
     width: 90%;
@@ -17,10 +19,10 @@ html, body {
 }
 a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 h1 {
-    font-size: 40px;
+    font-size: 60px;
 }
 
 
@@ -32,14 +34,14 @@ h1 {
     flex-direction: row;
     align-items: center;
     justify-content: flex-end;
-
+    
     height: 10vh;
 }
 .navbar a {
     padding: .5rem 1rem;
     margin: 0 1rem;
     text-decoration: none;
-    color: black;
+    color: white;
 }
 .navbar a:hover {
     color: var(--clr-blue);
@@ -211,46 +213,41 @@ h1 {
     width: 100%;
 }
 .home-text {
-    width: 50%;
-    margin-top: 30vh;
+    width: 80%;
+    margin-top: 35vh;
 }
-.home-text .btn {
-    margin-block: 2rem;
-    padding: .8rem 3.5rem;
-    font-size: large;
+.stor-text {
+    color: #7BA3ED;
+    font-size: 100px;
+}
+.d-flex {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+.nav-git {
     background-color: white;
-    border: 2px solid var(--clr-blue);
-    color: var(--clr-blue);
-    border-radius: 5px;
-    cursor: pointer;
-}
-.home-text .btn:hover {
-    background-color: var(--clr-blue);
-    color: white;
-}
-.home-mini-text {
+    width: 50px;
+    height: 50px;
     display: flex;
-    gap: 5rem;
-}
-.home-arrow {
-    font-size: xx-large;
-    color: var(--clr-blue);
-}
-.home-img {
-    display: flex;
-    align-items: center;
     justify-content: center;
-    width: 40%;
-    margin-top: 10vh;
+    align-items: center;
+    border-radius: 50%;
+
+    font-size: 2rem;
+    color: black;
 }
-.home .mask {
-    mask-image: url('./assets//Twitter-logo.svg.png');
-    mask-size: 20rem;
-    mask-repeat: no-repeat;
-  
-    -webkit-mask-size: 100%;
-    -webkit-mask-image: url('./assets/Twitter-logo.svg.png');
-    -webkit-mask-repeat: no-repeat;
+.nav-in {
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+
+    font-size: 2rem;
+    color: black;
 }
 
 
