--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,8 @@
     box-sizing: border-box;
 }
 html, body {
-    font-family: 'Aboreto', cursive;
-    color: white;
-    background-color: rgb(9, 9, 9);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 300;
 }
 .container {
     width: 90%;
@@ -19,10 +18,10 @@ html, body {
 }
 a {
     text-decoration: none;
-    color: white;
+    color: black;
 }
 h1 {
-    font-size: 60px;
+    font-size: 40px;
 }
 
 
@@ -41,7 +40,7 @@ h1 {
     padding: .5rem 1rem;
     margin: 0 1rem;
     text-decoration: none;
-    color: white;
+    color: black;
 }
 .navbar a:hover {
     color: var(--clr-blue);
@@ -213,43 +212,47 @@ h1 {
     width: 100%;
 }
 .home-text {
-    width: 80%;
-    margin-top: 35vh;
+    width: 50%;
+    margin-top: 30vh;
 }
-.stor-text {
-    color: #7BA3ED;
-    font-size: 100px;
-}
-.d-flex {
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
-}
-.nav-git {
+.home-text .btn {
+    margin-block: 2rem;
+    padding: .8rem 3.5rem;
+    font-size: large;
     background-color: white;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-
-    font-size: 2rem;
-    color: black;
+    border: 2px solid var(--clr-blue);
+    color: var(--clr-blue);
+    border-radius: 5px;
+    cursor: pointer;
 }
-.nav-in {
-    background-color: white;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-
-    font-size: 2rem;
-    color: black;
+.home-text .btn:hover {
+    background-color: var(--clr-blue);
+    color: white;
 }
+.home-mini-text {
+    display: flex;
+    gap: 5rem;
+}
+.home-arrow {
+    font-size: xx-large;
+    color: var(--clr-blue);
+}
+.home-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40%;
+    margin-top: 10vh;
+}
+.home .mask {
+    mask-image: url('./assets//Twitter-logo.svg.png');
+    mask-size: 20rem;
+    mask-repeat: no-repeat;
 
+    -webkit-mask-size: 100%;
+    -webkit-mask-image: url('./assets/Twitter-logo.svg.png');
+    -webkit-mask-repeat: no-repeat;
+}
 
 /* PORTFOLIO */
 .portfolio-wrapper {
