--- a/src/App.css
+++ b/src/App.css
@@ -326,14 +326,6 @@ button:hover {
     align-items: center;
     flex-direction: column;
 }
-.portfolio-item {
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
-}
-.portfolio-text {
-    width: 35%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+#portfölj h3 {
+    margin-bottom: 10px;
 }
