--- a/src/App.css
+++ b/src/App.css
@@ -325,6 +325,7 @@ button:hover {
     display: flex;
     align-items: center;
     flex-direction: column;
+    position: relative;
 }
 #portfölj h3 {
     margin-bottom: 10px;
