--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -12,15 +12,16 @@
     display: inline-flex;
     justify-content: center;
     gap: 3rem;
-    /* background-color: green; */
     color: black;
     margin-bottom: 50px;
 }
 .carousel-item img {
     width: 400px;
+    border-radius: 1rem;
+    /* border: 2px solid lightblue; */
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.323);
 }
 .carousel-item .portfolio-text {
-    /* border: 1px solid pink; */
     max-width: 500px;
 
     word-break: break-word;
@@ -44,9 +45,10 @@
 .btn-prev {
     position: absolute;
     bottom: 47%;
-    left: 0;
+    left: 8%;
 
     background-color: transparent;
+    color: #7BA3ED;
     border: none;
     padding: 0;
     margin: 0;
@@ -54,15 +56,17 @@
 .btn-next {
     position: absolute;
     bottom: 47%;
-    right: 0;
+    right: 8%;
 
     background-color: transparent;
+    color: #7BA3ED;
     border: none;
     padding: 0;
     margin: 0;
 }
 .btn-prev:hover, .btn-next:hover {
     background-color: transparent;
+    border: none;
     color: #2e4674;
 }
 
