--- a/src/App.css
+++ b/src/App.css
@@ -338,3 +338,47 @@ button:hover {
 #portfölj h3 {
     margin-bottom: 10px;
 }
+
+
+
+
+
+
+/* FOOTER */
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 2px solid var(--clr-blue);
+    padding-block: 5rem;
+
+    width: 80%;
+    margin: 0 auto;
+}
+.footer .right {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.footer .right a:hover {
+    color: var(--clr-blue);
+}
+.footer .center {
+    width: 500px;
+}
+.contact-info {
+    display: flex;
+    margin-top: 2rem;
+    gap: 5rem;
+}
+
+.btn-copy {
+    padding: .5rem 0;
+}
+.btn-copy:hover {
+    color: pink;
+    cursor: pointer;
+}
+.btn-copy:active {
+    color: #7BA3ED;
+}
