Added skills page

--- a/src/App.css
+++ b/src/App.css
@@ -382,3 +382,63 @@ button:hover {
 .btn-copy:active {
     color: #7BA3ED;
 }
+
+
+
+
+
+
+
+
+/* SKILLS */
+#kunskaper {
+    /* height: 100vh; */
+    padding-block: 5rem;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+#kunskaper .bg {
+    width: 100%;
+    margin-top: 5rem;
+    
+    background-image: url('./assets/skills/birds-icons.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 50vh;
+    position: relative;
+}
+
+/* .css {
+    position: absolute;
+    top: 100px;
+    left: 350px;
+}
+.html {
+    position: absolute;
+    top: 70px;
+    left: 250px;
+}
+.vue {
+    position: absolute;
+    top: 50px;
+    left: 100px;
+}
+.react {
+    position: absolute;
+    top: 130px;
+    right: 410px;
+}
+.js {
+    position: absolute;
+    top: 150px;
+    right: 670px;
+}
+.mantine {
+    position: absolute;
+    top: 130px;
+    right: 570px;
+    border-radius: 50%;
+} */
