--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ html, body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 300;
     background-color: white;
+    scroll-behavior: smooth;
 }
 .container {
     width: 90%;
@@ -20,6 +21,7 @@ html, body {
 a {
     text-decoration: none;
     color: black;
+    transition: .3s;
 }
 h1 {
     font-size: 40px;
@@ -51,6 +53,7 @@ button {
     display: flex;
     align-items: center;
     gap: 1rem;
+    transition: .3s;
 }
 button:hover {
     background-color: white;
@@ -61,7 +64,17 @@ button:hover {
     color: var(--clr-blue);
 }
 
-
+.btn-scroll {
+    position: fixed; 
+    right: 40px;
+    bottom: 40px;
+    color: var(--clr-blue);
+    cursor: pointer;
+    transition: .3s;
+}
+.btn-scroll:hover {
+    color: black;
+}
 
 
 
@@ -260,9 +273,10 @@ button:hover {
     gap: 10px;
     position: absolute;
     bottom: 2rem;
+    transition: .3s;
 }
 .scroll-text:hover {
-    padding-bottom: 10px;
+    transform: translateY(.5rem);
 }
 
 .home-img {
@@ -293,7 +307,7 @@ button:hover {
 
 
 
-
+/* ABOUT */
 .about {
     height: 100vh;
     padding-top: 5rem;
@@ -325,16 +339,14 @@ button:hover {
     color: rgb(47, 47, 47);
 }
 .about .mask {
-    /* mask-image: url('./assets//Twitter-logo.svg.png'); */
     mask-image: url('./assets/mask-3.png');
-    /* mask-image: url('./assets/square.png'); */
 
     mask-size: contain;
     mask-position: top;
     mask-repeat: no-repeat;
 
     /* -webkit-mask-size: 100%; */
-    /* -webkit-mask-image: url('./assets/mask-2.png'); */
+    -webkit-mask-image: url('./assets/mask-3.png');
     -webkit-mask-repeat: no-repeat;
 
     margin-left: 4rem;
