--- a/src/App.css
+++ b/src/App.css
@@ -61,8 +61,7 @@ button:hover {
 
 
 
-
-/* SCROLL BUTTON */
+/* ------------------------------scroll button--------------------------------- */
 .btn-scroll {
     position: fixed; 
     right: 40px;
@@ -78,6 +77,11 @@ button:hover {
 
 
 
+
+
+
+
+/* ------------------------------home--------------------------------- */
 /* SOCIAL ICONS */
 .social-icons {
     display: flex;
@@ -97,11 +101,9 @@ button:hover {
 
 
 
-/* HOME */
 .home {
     height: 90vh;
     display: flex;
-    /* width: 100%; */
 }
 .home-text {
     width: 36%;
@@ -142,11 +144,18 @@ button:hover {
     margin-left: 4rem;
 }
 
+/* for medium devices */
+@media screen and (max-width: 1024px) {
+}
+
+/* for small devices */
+@media screen and (max-width: 568px) {
+}
 
 
 
 
-/* ABOUT */
+/* ------------------------------about--------------------------------- */
 .about {
     height: 100vh;
     padding-top: 5rem;
@@ -196,8 +205,7 @@ button:hover {
 
 
 
-
-/* PORTFOLIO */
+/* ------------------------------portfolio--------------------------------- */
 #portfölj {
     height: 100vh;
     padding-top: 5rem;
@@ -216,8 +224,7 @@ button:hover {
 
 
 
-
-/* SKILLS */
+/* ------------------------------skills--------------------------------- */
 #kunskaper {
     /* height: 100vh; */
     padding-block: 5rem;
@@ -237,35 +244,3 @@ button:hover {
     height: 50vh;
     position: relative;
 }
-
-/* .css {
-    position: absolute;
-    top: 100px;
-    left: 350px;
-}
-.html {
-    position: absolute;
-    top: 70px;
-    left: 250px;
-}
-.vue {
-    position: absolute;
-    top: 50px;
-    left: 100px;
-}
-.react {
-    position: absolute;
-    top: 130px;
-    right: 410px;
-}
-.js {
-    position: absolute;
-    top: 150px;
-    right: 670px;
-}
-.mantine {
-    position: absolute;
-    top: 130px;
-    right: 570px;
-    border-radius: 50%;
-} */
