--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ button:hover {
 }
 img {
     width: 100%;
-    min-width: 350px;
+    min-width: 280px;
 }
 
 
@@ -84,12 +84,14 @@ img {
 /* ------------------------------home--------------------------------- */
 /* SOCIAL ICONS */
 .social-icons {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     width: 10%;
     gap: 2rem;
-    margin-left: 4rem;
-    /* margin-top: 40vh; */
+    margin-left: 4rem; */
+    display: grid;
+    grid-template-columns: max-content;
+    row-gap: 1rem;
 }
 .social-icon {
     font-size: 1.5rem;
@@ -103,11 +105,19 @@ img {
 
 .home {
     height: 90vh;
-    display: flex;
+    /* display: flex;
+    align-items: center; */
+    display: grid;
+    gap: 1.5rem;
+    /* grid-template-columns: .5fr 3fr; */
+    grid-template-columns: .25fr 3fr;
+
+    padding-top: 3.5rem;
     align-items: center;
 }
 .home-text {
-    width: 36%;
+    /* width: 36%; */
+    grid-column: 1/3;
 }
 .home p {
     margin-top: 1rem;
@@ -146,22 +156,31 @@ img {
 
 /* for medium devices */
 @media screen and (max-width: 1400px) {
-    .home-text {
-        width: 50%;
-    }
     h1 {
         font-size: xx-large;
     }
 }
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 568px) {
     h1 {
         font-size: x-large;
     }
-
+    .home {
+        grid-template-columns: max-content 1fr 1fr;
+    }
+    .home-text {
+        grid-column: initial;
+    }
+    .home-img {
+        order: 1;
+        justify-self: center;
+    }
 }
 
 /* for small devices */
 @media screen and (max-width: 568px) {
+    .scroll-text {
+        display: none;
+    }
 }
 
 
