Home-page is now responsive

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ html, body {
     font-weight: 300;
     background-color: white;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 .container {
     width: 90%;
@@ -21,11 +22,9 @@ a {
     text-decoration: none;
     color: black;
     transition: .3s;
-    width: fit-content;
 }
 h1 {
-    font-size: 40px;
-    margin-bottom: 10px;
+    font-size: x-large;
 }
 p {
     line-height: 22px;
@@ -60,7 +59,7 @@ button:hover {
 }
 img {
     width: 100%;
-    min-width: 280px;
+    height: 100%;
 }
 
 
@@ -84,11 +83,6 @@ img {
 /* ------------------------------home--------------------------------- */
 /* SOCIAL ICONS */
 .social-icons {
-    /* display: flex;
-    flex-direction: column;
-    width: 10%;
-    gap: 2rem;
-    margin-left: 4rem; */
     display: grid;
     grid-template-columns: max-content;
     row-gap: 1rem;
@@ -101,45 +95,30 @@ img {
 }
 
 
-
-
+/* HOME */
 .home {
     height: 90vh;
-    /* display: flex;
-    align-items: center; */
     display: grid;
     gap: 1.5rem;
-    /* grid-template-columns: .5fr 3fr; */
-    grid-template-columns: .25fr 3fr;
+    grid-template-columns: .5fr 3fr;
 
     padding-top: 3.5rem;
     align-items: center;
 }
 .home-text {
-    /* width: 36%; */
     grid-column: 1/3;
 }
 .home p {
     margin-top: 1rem;
     margin-bottom: 2rem;
 }
+
 .scroll-text {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    position: absolute;
-    bottom: 2rem;
-    transition: .3s;
-}
-.scroll-text:hover {
-    transform: translateY(.5rem);
+    display: none;
 }
 
 .home-img {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
+    max-width: 300px;
 }
 .home .mask {
     mask-image: url('./assets/mask-3.png');
@@ -147,22 +126,15 @@ img {
     mask-position: top;
     mask-repeat: no-repeat;
 
-    /* -webkit-mask-size: 100%; */
     -webkit-mask-image: url('./assets/mask-3.png');
     -webkit-mask-repeat: no-repeat;
-
-    margin-left: 4rem;
 }
+
 
 /* for medium devices */
-@media screen and (max-width: 1400px) {
+@media screen and (min-width: 700px) {
     h1 {
         font-size: xx-large;
-    }
-}
-@media screen and (min-width: 568px) {
-    h1 {
-        font-size: x-large;
     }
     .home {
         grid-template-columns: max-content 1fr 1fr;
@@ -173,15 +145,33 @@ img {
     .home-img {
         order: 1;
         justify-self: center;
+        max-width: 500px;
+        margin-bottom: 5rem;
+    }
+    .scroll-text {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        position: absolute;
+        bottom: 2rem;
+        transition: .3s;
+    }
+    .scroll-text:hover {
+        transform: translateY(.5rem);
     }
 }
 
-/* for small devices */
-@media screen and (max-width: 568px) {
-    .scroll-text {
-        display: none;
+/* for big devices */
+@media screen and (min-width: 1024px) {
+    .social-icons {
+        /* transform: translateX(6rem); */
+        padding-right: 6rem;
+    }
+    h1 {
+        font-size: 40px;
     }
 }
+
 
 
 
